syntax="proto3";

message EmailRequest {
  string userEmail = 1;
}

message EmailResponse {
  string result = 1;
}

service UserRegistrationEmail {
  rpc newEmail(EmailRequest) returns (EmailResponse) {};
}